# discord-cost-monitor

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
bot/: __init__.py  main.py
bot/cogs/: __init__.py  audit.py  scheduler.py  summary.py
bot/embeds/: __init__.py  formatters.py
config/: __init__.py  settings.py
config/pricing/: default.json
deploy/: Dockerfile
deploy/k8s/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  namespace.yaml  serviceaccount.yaml
metrics/: __init__.py  analyzer.py  opencost_client.py  prometheus_client.py
