[project]
name = "kube-cost-bot"
version = "1.0.0"
description = "Kubernetes Resource Efficiency & Cost Monitor — Discord Bot"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Hogan Nguyen" },
]

dependencies = [
    "discord.py>=2.4.0",
    "prometheus-api-client>=0.5.5",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.6",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
